--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
+
 body {
 	background: #222;
 	width: 100vh;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	font-family: 'Manrope', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 700;
 }
